--- a/index.html
+++ b/index.html
@@ -1086,5 +1086,11 @@
     // Default view on load
     showDashboard();
   </script>
+   <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      setGpfTitleSuffix(""); // no suffix until connected
+    });
+  </script>
+ 
 </body>
 </html>
