--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
       padding: 3px 21px;
     }
     
-    .status-ok {    /* UNLOCKABLE (green) */
+    .status-ok {    /* UNLOCKED (green) */
       color: #1f7a34 !important;
-      padding: 3px 13px;
+      padding: 3px 20px;
     }
     
     .status-warn {  /* WITHDRAWN (gold) */
@@ -878,7 +878,11 @@
     display: contents !important;
   }
 }
-
+/* Remove button should match VIEW ONLY size */
+.vault-col-buttons button[data-role="remove"] {
+  padding: 5px 10px !important;
+  font-size: 13px !important;
+}
   </style>
 </head>
 
