--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
       padding: 5px 10px;
       border-radius: 8px;
       border: 1px solid #b38c00;
-      width: 100%;
+      width: 70%;
       font-size: 12px;
       box-sizing: border-box;
       white-space: nowrap;
@@ -841,6 +841,7 @@
     .vault-col-buttons button[data-role="remove"] {
       padding: 5px 10px !important;
       font-size: 13px !important;
+      width: 70% !important;
     }
   </style>
 </head>
