--- a/index.html
+++ b/index.html
@@ -577,10 +577,13 @@
       width: 100%;
       display: block;
     }
+    .time-progress-bar-bg {
+      width: 220px !important;
+    }
 
-    /* ===========================
+    /* ====================================================== =========================== 
        MOBILE LAYOUT (<=700px)
-       =========================== */
+       ====================================================== ===========================  */
     @media (max-width: 700px) {
 
       /* Body padding a bit tighter */
@@ -831,7 +834,7 @@
         order: 99;
       }
     }
-
+    //////////////////////////////////////////////////////////
     /* FIX: allow minimize to work on mobile (override flex !important) */
     .vault-card.collapsed .vault-body {
       display: none !important;
