--- a/index.html
+++ b/index.html
@@ -882,6 +882,10 @@
       padding: 5px 10px !important;
       font-size: 13px !important;
     }
+    /* FINAL authority: collapsed vaults must always hide body (mobile or desktop) */
+    .vault-card.collapsed .vault-body {
+      display: none !important;
+    }
   </style>
 </head>
 
