--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <meta name="theme-color" content="#050815">
 
-  <title>Price + Time Vaults (PLS / pDAI / HEX)</title>
+  <title>PulseLocker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -905,9 +905,9 @@
     <div class="header-left">
       <img src="pulselocker-logo-websiteHeader.png" alt="PLS_LKR" class="header-logo">
       <div class="header-title-block">
-        <div><b>Price + Time Vaults (PLS / pDAI / HEX)</b></div>
+        <div><b>PulseLocker</b></div>
         <div class="header-subtitle small">
-          Discipline vaults with price-mediated unlock & time backup
+          PLS / pDAI / HEX vaults with price-mediated unlock & backup time unlock
         </div>
       </div>
     </div>
