--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
       <div class="header-title-block">
         <div><b>PulseLocker</b></div>
         <div class="header-subtitle small">
-          PLS / pDAI / HEX vaults with price-mediated unlock & backup time unlock
+          PLS / pDAI / HEX vaults: Unlock at target price or backup time
         </div>
       </div>
     </div>
