--- a/index.html
+++ b/index.html
@@ -1178,6 +1178,7 @@
         <li><strong>View-only vaults</strong> – You may view and deposit into vaults you don't own, but cannot withdraw.</li>
         <li><strong>Reorder vaults</strong> – Use the <em>▲</em> / <em>▼</em> arrows.</li>
         <li><strong>Minimize / maximize</strong> – Collapse or expand a vault using the <em>Min / Max</em> button.</li>
+        <li><strong>Import Vaults from another wallet</strong> – Vaults display, but no withdraw function, and marked: <em>View Only</em></li>
       </ul>
       
       <div style="margin-top: 24px; display: flex; justify-content: flex-start; gap: 24px;">
