--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
       <p>
         Once unlocked, click <strong>Withdraw</strong>.
         <br>A 0.5% fee is taken automatically (on successful withdrawals only).
-        <br><strong>After withdrawal, the vault will never lock tokens again,</strong> though still functions as an address.
+        <br><strong>After withdrawal, the vault will never lock tokens again.</strong>
       </p>
 
       <!-- SEPARATOR ----------------------------------------------------------->
