--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
       <h2>0) Connect Your Wallet</h2>
       <p>
           To begin, connect your Web3 wallet to PulseLocker using your browser’s
-          wallet extension (such as <strong>MetaMask</strong> or <strong>Rabbi</strong>). 
+          wallet extension (such as <strong>MetaMask</strong> or <strong>OKX</strong>). 
           This allows the app to read your address and display any vaults you have created.
       </p>
       <p>
