--- a/index.html
+++ b/index.html
@@ -1112,9 +1112,9 @@
               <li>Factory registry enables vault restore.</li>
               <li>Intended as Single-use vaults.</li>
               <li>Rescue function for accidental 2nd deposits, and misplaced PLS/pDai/HEX.</li>
-              <li>Ability to recover other prc20 tokens accidentally sent to a vault (via token address): 
+              <li>Ability to recover <strong>other</strong> prc20 tokens accidentally sent to a vault: 
                   <a href="#" id="deepRescueLink" style="color:#3b82f6; font-weight:600; cursor:pointer;">
-                      Deep Rescue (will not work with lock tokens, obviously)
+                      Deep Rescue 
                   </a>
               </li>
             </ul>
