--- a/index.html
+++ b/index.html
@@ -1086,12 +1086,12 @@
               <li>Immutable Discipline Vaults for PLS, pDAI, or HEX. Unlocking via USD price threshold, or via time (backup)</li>
               <li>
                 Verified Factory Contract, view on:
-                <a href="https://scan.pulsechain.com/address/0x1C6b16003c107d28CcC550Eb3613a262ADaf0416"
+                <a href="https://scan.pulsechain.com/address/0x51379ABd46f1711ca7bEF589c80c91E13CBbb6E7"
                    target="_blank" style="color:#3b82f6;">PulseScan</a>,
-                <a href="https://otter.pulsechain.com/address/0x1C6b16003c107d28CcC550Eb3613a262ADaf0416/contract"
+                <a href="https://otter.pulsechain.com/address/0x51379ABd46f1711ca7bEF589c80c91E13CBbb6E7/contract"
                    target="_blank" style="color:#3b82f6;">Otter.pulsechain</a>,
-                <a href="https://repo.sourcify.dev/369/0x1C6b16003c107d28CcC550Eb3613a262ADaf0416"
-                   target="_blank" style="color:#3b82f6;">Sourcify</a>. (0x1C6b16003c107d28CcC550Eb3613a262ADaf0416)
+                <a href="https://repo.sourcify.dev/369/0x51379ABd46f1711ca7bEF589c80c91E13CBbb6E7"
+                   target="_blank" style="color:#3b82f6;">Sourcify</a>. (0x51379ABd46f1711ca7bEF589c80c91E13CBbb6E7)
               </li>
               <li>
                 Browse the public 
@@ -1107,7 +1107,7 @@
               <li>Factory registry enables vault restore.</li>
               <li>Intended as Single-use vaults.</li>
               <li>Rescue function for accidental 2nd deposits, and misplaced PLS/pDai/HEX (buttons appear as needed)</li>
-              <li>Ability to recover <strong>other</strong> prc20 tokens accidentally sent to a vault: 
+              <li>Rescue <strong>other</strong> prc20 tokens accidentally sent to a vault: 
                   <a href="#" id="deepRescueLink" style="color:#3b82f6; font-weight:600; cursor:pointer;">
                       Deep Rescue 
                   </a>
