--- a/index.html
+++ b/index.html
@@ -1229,8 +1229,8 @@
       <h1>PulseLocker – User Guide</h1>
       <p>
         PulseLocker lets you create immutable single-use vaults for PLS, pDAI, or HEX.<br> 
-        Each vault unlocks when <strong>either</strong> a target USD price is met or a backup
-        <strong>time unlock</strong> arrives.<br> Everything is fully on-chain with no admin keys.<br>
+        Each vault unlocks when either a <strong>target USD price is met</strong> or a backup
+        <strong>time unlock arrives.</strong><br> Everything is fully on-chain with no admin keys.<br>
         The contract is fully verified, immutable, and on-chain, so no one — including the creator — can alter, pause, or access your vault.
       </p>
       <h2>0) Connect Your Wallet</h2>
