--- a/index.html
+++ b/index.html
@@ -777,9 +777,10 @@
       }
 
       .header-tabs {
-        width: 100%;
-        justify-content: flex-start;
-        gap: 14px;
+          width: auto !important;
+          justify-content: flex-start;
+          gap: 10px !important;
+          flex-wrap: nowrap !important;
       }
 
       .header-tab {
