--- a/index.html
+++ b/index.html
@@ -1323,10 +1323,14 @@
       <h3>Accidentally Sent More Funds?</h3>
       <p>
         After withdrawal, the vault is considered “finished”.  
-        If you later send tokens to it by mistake, they will not be price-locked.
+        If you later send tokens (PLS/PDAI/HEX) to it by mistake, they will not be price-locked.
       </p>
       <p>
         The UI will show a <strong>Rescue</strong> button, allowing you to retrieve them immediately.
+      </p>
+      <p>
+        If any other PRC20 tokens are accidentally sent to a vault, they too may be rescued via clicking 
+        'deep rescue' in the 'about this app' section of the dashboard.
       </p>
   
       <!-- EXTRA INFO 2 -------------------------------------------------------->
