add $ value display

--- a/index.html
+++ b/index.html
@@ -1062,6 +1062,17 @@
         display: block;
       }
     }
+  .vault-dollar-value {
+    margin-top: 4px;
+    padding: 2px 6px;
+    border-radius: 6px;
+    background: rgba(59, 130, 246, 0.15);
+    color: #60a5fa;
+    font-size: 12px;
+    font-weight: 600;
+    white-space: nowrap;
+    text-align: center;
+  }
 
   </style>
 </head>
